<resources>
    <string name="app_name">Органайзер</string>
    <string name="gestational_age">Срок гестации:</string>
    <string name="date_of_birth">Дата рождения:</string>
    <string name="minimum_value">Мин. значение:</string>
    <string name="maximum_value">Макс. значение:</string>
    <string name="max_divide_min">Макс./Мин.:</string>
    <string name="reference_max_divide_min">Эталонные Макс./Мин.:</string>
    <string name="conclusion">Заключение:</string>
    <string name="enter_values">Введите значение</string>
    <string name="creatinine">Креатинин</string>
    <string name="unit_name">мкмоль/л</string>
    <string name="stage">Стадия</string>
    <string name="settings">Дополнительно</string>
    <string name="stages_view">Просмотреть стадий</string>
    <string name="see_odds">Посмотреть коэффициенты</string>
    <string name="back">Назад</string>
    <string name="enter_data">Введите данные</string>
    <string name="name">Имя</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="coefficients">Коэффициенты</string>
    <string name="deleting_patient">Удаление пациента</string>
    <string name="yes">Да</string>
    <string name="delete_text">Вы уверены что хотите удалить текущего пациента?</string>
    <string name="stages">Стадии</string>
    <string name="action">Действие</string>
    <string name="add_patients">Добавить нового пациента</string>
    <string name="delete_patient">Удалить текущего пациента</string>
    <string name="export_patient">Экспортировать текущего пациента</string>
    <string name="success_patient_import">Импорт пациента успешно завершён</string>
    <string name="success_ratio_import">Импорт коэффиентов успешно завершён</string>
    <string name="success_stages_import">Импорт стадий успешно завершён</string>
    <string name="week">недель(я)</string>
    <string name="entered_correctly">Убедитесь что данные введены верно!</string>
    <string name="the_patient_is_healthy">Без ОПП</string>
    <string name="insufficient_data">Недостаточно данных</string>
    <string name="permission_not_granted">Для выполняемых действий не были предоставлены права доступа</string>
    <string name="having_aki">Наличие ОПП</string>
    <string name="fill_in_all_data">Заполните все данные!</string>
    <string name="relation_to_original_value">Отношение к исходному значению</string>
    <string name="creatinine_level">Уровень креатинина</string>
    <string name="unit">Единица измерения</string>
    <string name="replacement_therapy">Заместительная терапия</string>
    <string name="validationError">Введено некорректное значение</string>
</resources>